# MSL-RAPTOR

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml
docker/: docker_tips.md
docker/tx2_jp422/: python_libs.csv  readme.md
docker/tx2_jp430/: python_libs.csv  readme.md
gtsam_postprocess/: CMakeLists.txt
gtsam_postprocess/include/: gtsam_test.h  msl_raptor_gtsam_utils.h
gtsam_postprocess/src/: gtsam_test.cpp  msl_raptor_gtsam_utils.cpp  rosbag_to_json.py
include/: Hungarian.h  file_io_utils.h  math_utils.h  raptor_object_slam.h  shared_imports.h
launch/: bb_viz.launch  gt_pose_broadcaser.launch  gt_pose_broadcaster.launch  msl_raptor.launch  msl_raptor_nocs.launch  msl_raptor_ocam.launch  msl_raptor_rosbag.launch  ocam_bag_rec.launch  plot_6dof.launch  poses_viz.launch  raptor_object_slam.launch  raptor_viz.launch  record_data_for_post_process.launch  test_camera_cal.launch
msg/: AngledBbox.msg  AngledBboxes.msg  TrackedObject.msg  TrackedObjects.msg  TrackedPoses.msg  angled_bb.msg
params/: all_obs.yaml  bottle_ukf_params.yaml  bowl_ukf_params.yaml  classes.names  cup_ukf_params.yaml  experiment.yaml  experiment_nocs.yaml  fake_list_nocs.names  gt_poses_to_broadcast.yaml  laptop_ukf_params.yaml  mslquad_ukf_params.yaml  objects_used.txt  person_ukf_params.yaml  quad7.yaml  quad7_nocs.yaml
params/category_params/: bottle_ukf_params.yaml  bowl_ukf_params.yaml  camera_ukf_params.yaml  can_ukf_params.yaml  cup_ukf_params.yaml  laptop_ukf_params.yaml  mslquad_ukf_params.yaml  person_ukf_params.yaml
params/generated_vertices_for_raptor/: bottle_swell_2  bottle_swell_2_joined_inds  bowl_blue_ikea_norm  bowl_blue_white_chinese_norm  bowl_brown_ikea_norm  bowl_brown_ikea_norm_joined_inds  bowl_chinese_blue_norm  bowl_green_msl  bowl_grey_msl_joined_inds  bowl_shengjun_norm  bowl_shengjun_norm_joined_inds  bowl_white_small_norm  bowl_white_small_norm_joined_inds  laptop_air_0_norm  laptop_air_1_norm  laptop_air_xin_norm  laptop_alienware_norm  laptop_dell_norm  laptop_mac_pro_norm  mug2_scene3_norm  mug2_scene3_norm_joined_inds  mug_anastasia_norm  mug_brown_starbucks_norm  mug_brown_starbucks_norm_joined_inds  mug_daniel_norm  mug_daniel_norm_joined_inds  mug_duke  mug_vignesh_norm  mug_white_green_norm
params/objects/: object_params.yaml
params/objects_used/: cust_nocs.txt  objects_used.txt  objects_used_nocs_4.txt  objects_used_nocs_7.txt  objects_used_test_nocs_3.txt  objects_used_test_nocs_4.txt  objects_used_test_nocs_5.txt  objects_used_test_nocs_6.txt  objects_used_train_nocs_2.txt  objects_used_train_nocs_5.txt  quad_person.txt
params/setup/: quad7_nocs.yaml
rviz/: debug.rviz
src/: file_io_utils.cpp  gtsam_ros_test.cpp  msl_raptor.py  msl_raptor_main.py  nocs_rosbag_to_camera_traj.py  raptor_object_slam.cpp  ros_interface.py  test_code.py  ukf.py
src/front-end/: image_segmentor.py  tracker.py
src/front_end/: detector.py  image_segmentor.py  test_detecting_and_tracking.py  test_tracker.py  tracker.py
src/slam_utils_cpp/: Hungarian.cpp  file_io_utils.cpp  math_utils.cpp
src/utils/: math_utils.py  ros_utils.py  ukf_utils.py
(+69 files in other folders)
